style.css
@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Montserrat:wght@300;400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}

body {
  background-image: linear-gradient(300deg, #507494, #34495e);
  color: white;
  /* max-width: 80%;
  margin: auto; */
}

img {
  display: block;
}

/* NAVBAR */
.navbar {
  padding: 30px;
  display: flex;
  justify-content: center;
  top: 0;
  z-index: 9999;
  background: rgba(0, 0, 0, 0.2);
  /* position: sticky; */
}

.navbar ul {
  display: flex;
  justify-content: center;
  list-style: none;
}

.navbar a {
  text-decoration: none;
  font-size: 20px;
  font-weight: 600;
  color: white;
  transition: 0.5s;
  text-shadow: 2px 2px 5px rgb(32, 32, 32);
  padding: 20px;
}

.navbar a:hover {
  /* color: #82b7eb; */
  color: rgb(255, 255, 68);
}

/* HEADER */
.container-header {
  padding: 2rem;
}

.slider-wrapper {
  position: relative;
  max-width: 48rem;
  margin: 0 auto;
}

.slider {
  display: flex;
  aspect-ratio: 16 / 9;
  overflow-x: hidden;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
  box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0, 0, 0.25);
  border-radius: 1rem;
}

.slider img {
  flex: 1 0 100%;
  scroll-snap-align: start;
  object-fit: cover;
}

.slider-nav {
  display: flex;
  column-gap: 1rem;
  position: absolute;
  bottom: 1.25rem;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1;
}

.slider-nav a {
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 50%;
  opacity: 0.75;
  transition: opacity ease 250ms;
}

.slider-nav a:hover {
  opacity: 1;
}

/* MAIN - ABOUT*/
.container {
  max-width: 80%;
  margin: 50px auto;
  /* background-color: black; */
}

.about h2 {
  font-size: 30px;
  margin-bottom: 25px;
  border-bottom: 2px solid rgb(255, 255, 68);
  display: inline-block;
}

.description h3 {
  font-size: 25px;
  padding-bottom: 10px;
}

h4 {
  font-size: 20px;
  color: rgb(255, 255, 68);
  padding-bottom: 10px;
}

.about-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.description {
  flex: 1 1 40rem;
  text-align: left;
}

.photo {
  flex: 1 1 35rem;
  display: flex;
  justify-content: end;
}

.photo .masking {
  -webkit-mask-image: url(images/brush-stroke.png);
  -webkit-mask-size: 180%;
  -webkit-mask-position: 50% 50%;
}

.photo .masking img {
  animation: floatImage 4s ease-in-out infinite;
}

.photo .masking img {
  /* border-radius: 40%; */
  animation: floatImage 4s ease-in-out infinite;
}

@keyframes floatImage {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(1rem);
  }
  100% {
    transform: translateY(0);
  }
}

/* MAIN - SKILLS */
.skills img {
  display: block;
  width: 100%;
}

.text-end {
  text-align: end;
}

.skills h2 {
  font-size: 30px;
  margin-bottom: 50px;
  border-bottom: 2px solid rgb(255, 255, 68);
  display: inline-block;
}

.grid-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  gap: 20px;
  justify-content: center;
  border-radius: 10px;
}

.img-skill:hover {
  filter: grayscale(100%);
  transition: 1s;
  cursor: pointer;
}

.grid-container #skill-1 {
  grid-column: 1 / 3;
  grid-row: 1 / 3;
}

/* MAIN - CONTACT */
.contact h2 {
  font-size: 30px;
  margin-bottom: 50px;
  border-bottom: 2px solid rgb(255, 255, 68);
  display: inline-block;
}

.text-center {
  text-align: center;
}

.form-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

form {
  background-color: #fff;
  display: flex;
  flex-direction: column;
  padding: 2vw 4vw;
  width: 50%;
  max-width: 500px;
  border-radius: 10px;
}

form h3 {
  color: #555;
  margin-bottom: 10px;
}

form p {
  color: #555;
  margin-bottom: 20px;
}

form input,
form textarea {
  border: 0;
  margin: 5px 0;
  padding: 5px;
  outline: none;
  background-color: #f5f5f5;
  font-size: 15px;
}

form button {
  padding: 15px;
  background-color: rgb(255, 255, 68);
  font-size: 18px;
  border: 0;
  outline: none;
  cursor: pointer;
  width: 150px;
  margin: 15px auto 0;
  border-radius: 20px;
}

form button:hover {
  background-color: #a5a5a5;
}

/* RESPONSIVE */

@media screen and (max-width: 425px) {
  .navbar a {
    font-size: 16px;
    padding: 10px;
  }

  .about-container {
    flex-wrap: wrap;
  }

  .description {
    order: 1;
  }
}

@media screen and (min-width: 768px) {
  .grid-container #skill-1 {
    grid-column: 1 / 3;
    grid-row: 1 / 3;
  }

  .grid-container #skill-2 {
    grid-column: 3 / 4;
    grid-row: 1;
  }

  .grid-container #skill-3 {
    grid-column: 4 / 5;
    grid-row: 1;
  }

  .grid-container #skill-4 {
    grid-column: 5 / 6;
    grid-row: 1;
  }

  .grid-container #skill-5 {
    grid-column: 3 / 4;
    grid-row: 2 / 3;
  }

  .grid-container #skill-6 {
    grid-column: 4 / 5;
    grid-row: 2 / 3;
  }

  .grid-container #skill-7 {
    grid-column: 5 / 6;
    grid-row: 2 / 3;
  }
}

